--- a/examples/Script_Nginx/nginx_install.yml
+++ b/examples/Script_Nginx/nginx_install.yml
@@ -1,5 +1,6 @@
 ---
 - hosts: all
+  become: true
   tasks:
     - name: ensure nginx is at the latest version
       apt: name=nginx state=latest
@@ -7,3 +8,4 @@
       service:
           name: nginx
           state: started
+      
